# Nimbus_Lab

./: README.md  autostart.sh  bat  generate_node.sh  initialize_new_ros_package
failure_testing/: CMakeLists.txt  package.xml
failure_testing/analysis/: control_messages.pptx  questions.txt  uav_table.xlsx
failure_testing/change_log/: changeLogMarch17  changeLogMarch24  changeLogMarch31  changeLogMarchThird
failure_testing/communication/include/: mavlink2MIT_AscTec.h  mavlink2ros.h
failure_testing/communication/src/: mavlink2mit_asctec.cpp  mavlink2mit_asctec_callback.cpp  mavlink2mit_asctec_init.cpp  mavlink2mit_asctec_thread.cpp  mavlink2ros.cpp  mavlink2ros_callback.cpp  mavlink2ros_init.cpp
failure_testing/flight_testing/include/: flight_testing.h
failure_testing/flight_testing/src/: flight_testing.cpp  flight_testing_callback.cpp  flight_testing_init.cpp  flight_testing_thread.cpp
failure_testing/launch/: ardrone.launch  ardrone_communication.launch  ardrone_driver.launch  ardrone_land  ardrone_reset  ardrone_takeoff  arducopter.launch  arducopter_communication.launch  communication.launch  flight_testing.launch  flight_testing.launch.bak  hummingbird_indoor.launch
failure_testing/m_file/: PID.m  attoPilot_sensor.m  cropSig.m  delayed_packet.m  equalizePower.m  importfile_csv.m  importfile_csv_multiple.m  plot_line.m  plot_topic.m  qci_interrupt.m  sensor_msgs_extract.m  test_run_breakdown.m  uav_comparison.m  unixTime2TestTime.m
failure_testing/msg/: Arducopter.msg  Mavlink.msg  Sensor.msg
failure_testing/parse_serial/include/: parse_serial.h
failure_testing/parse_serial/src/: parse_serial.cpp  parse_serial_callback.cpp  parse_serial_init.cpp
gps_testing/: CMakeLists.txt  package.xml
gps_testing/acknowledge/include/: acknowledge_control.h
gps_testing/acknowledge/src/: acknowledge_control.cpp  acknowledge_control_callback.cpp  acknowledge_control_init.cpp
gps_testing/basic_flight/include/: basic_flight.h  test_flight.h
gps_testing/basic_flight/src/: basic_flight.cpp  basic_flight_callback.cpp  basic_flight_init.cpp  test_flight.cpp  test_flight_callback.cpp  test_flight_init.cpp  test_flight_thread.cpp
gps_testing/change_log/: odroid
gps_testing/cloud_map/: Campaign_Report_Template_Willie.docx  Checklist_Cloud_Map_Willie.docx  Tenative_Cloud_Map_Test_Schedule.xlsx
gps_testing/gps_device/: Laser_Distance_Meter.xlsx  RTK_GPS_comparison.xlsx  gps_emlid.pptx
gps_testing/gps_device/include/: gps_device.h
gps_testing/gps_device/src/: gps_device.cpp  gps_device_callback.cpp  gps_device_init.cpp
gps_testing/gps_testing/include/: gps_testing.h
gps_testing/gps_testing/src/: gps_testing.cpp  gps_testing_callback.cpp  gps_testing_init.cpp  gps_testing_thread.cpp
gps_testing/launch/: basic_flight.launch  communication.launch  firefly_outdoor.launch  gps_testing.launch  hummingbird_indoor.launch  hummingbird_outdoor.launch  laser.launch  no_radio.launch  no_vehicle.launch  rf_testing.launch  zyt.launch
gps_testing/m_files/: minTime.m  plot_topic_gps.m  plot_topic_gps2.m  plot_topic_laser.m  plot_topic_odroid.m  smoothNoise.m  sync_time.m
gps_testing/msg/: Bytes.msg  Flight.msg  Gps.msg  Move.msg  Rssi.msg  Sensor.msg
gps_testing/parse_serial/include/: parse_serial.h
gps_testing/parse_serial/src/: parse_serial.cpp  parse_serial_callback.cpp  parse_serial_init.cpp
gps_testing/parse_type/include/: parse_type.h
gps_testing/parse_type/src/: parse_type.cpp  parse_type_callback.cpp  parse_type_init.cpp
gps_testing/reach/include/: reach.h
gps_testing/reach/src/: reach.cpp  reach_callback.cpp  reach_init.cpp
gps_testing/send_serial/include/: send_serial.h
gps_testing/send_serial/src/: send_serial.cpp  send_serial_callback.cpp  send_serial_init.cpp
gps_testing/sickdt50_reader/: sickdt50_reader.ino
gps_testing/xbee/: zigbee.cpp
gps_testing/xbee/include/: xbee.h
gps_testing/xbee/src/: xbee.cpp  xbee_callback.cpp  xbee_init.cpp
sphere/: CMakeLists.txt  package.xml
sphere/include/sphere/: sphere.h
sphere/launch/: hummingbird_pv.launch  sphere.launch  vel_ctrl_params.launch
sphere/src/: sphere.cpp  sphere_callback.cpp  sphere_init.cpp  sphere_thread.cpp
